k8s/cluster/apps/network/external-services/unifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app unifi
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: "${UNIFI_NETWORK_ADDRESS}"
  ports:
    - name: http
      port: &port 443
      protocol: TCP
      targetPort: *port
